<?xml version="1.0"?>
<package format="2">
  <name>semantic_lidar_debug</name>
  <version>0.0.1</version>
  <description>Debug: lidar topic + SemanticKITTI .label folder, publish colored cloud for RViz.</description>
  <maintainer email="pan@example.com">pan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <exec_depend>rviz</exec_depend>
</package>
